<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Item_Add_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="28dp"
            android:ems="10"
            android:id="@+id/editName" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:hint="@string/name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editPrice"
            android:textSize="28dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editName" android:hint="@string/price_can_leave_blank"/>
    <CheckBox
            android:text="@string/priority_gift"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priority_box" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editPrice" android:checked="false"/>
    <CheckBox
            android:text="@string/allow_multiples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/mult_box" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/priority_box"/>
    <CheckBox
            android:text="@string/available_online"
            android:layout_width="229dp"
            android:layout_height="41dp"
            android:id="@+id/online_box" android:layout_marginTop="8dp"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/mult_box" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <EditText
            android:layout_width="339dp"
            android:layout_height="139dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:ems="10"
            android:id="@+id/comments_field" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/online_box" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:hint="@string/additional_comments"/>
</android.support.constraint.ConstraintLayout>